complete all type of tx except stake

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,7 +9,7 @@
 		<title>Cmmander</title>
 	</head>
 	<body>
-		<div id="app">{{ message }}</div>
+		<div id="app"></div>
 		<script src="app.js"></script>
 	</body>
 </html>
